// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 or 8 day should display the Licence as Email, Licence Confirmation as Prefer not to be contacted and Newsletter as %s 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-emailfester@tester.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 or 8 day should display the Licence as Email, Licence Confirmation as Prefer not to be contacted and Newsletter as %s 2`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-emailfester@tester.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 or 8 day should display the Licence as Email, Licence Confirmation as Yes and Newsletter as %s 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-emailfester@tester.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 or 8 day should display the Licence as Email, Licence Confirmation as Yes and Newsletter as %s 2`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-emailfester@tester.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 or 8 day should display the Licence as Prefer not to be contacted, Licence Confirmation as Prefer not to be contacted and Newsletter as %s 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-license-non-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 or 8 day should display the Licence as Prefer not to be contacted, Licence Confirmation as Yes and Newsletter as %s 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-license-non-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 or 8 day should display the Licence as Text, Licence Confirmation as Prefer not to be contacted and Newsletter as %s 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 or 8 day should display the Licence as Text, Licence Confirmation as Prefer not to be contacted and Newsletter as %s 2`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 or 8 day should display the Licence as Text, Licence Confirmation as Yes and Newsletter as %s 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 or 8 day should display the Licence as Text, Licence Confirmation as Yes and Newsletter as %s 2`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Email, Licence Confirmation as Email and Newsletter as Prefer not to be contacted 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Email, Licence Confirmation as Email and Newsletter as Prefer not to be contacted for you with postal fulfilment 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Email, Licence Confirmation as Email and Newsletter as Yes 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Email, Licence Confirmation as Email and Newsletter as Yes for you with postal fulfilment 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Email, Licence Confirmation as Text and Newsletter as Prefer not to be contacted 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Email, Licence Confirmation as Text and Newsletter as Prefer not to be contacted for you with postal fulfilment 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Email, Licence Confirmation as Text and Newsletter as Yes 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Email, Licence Confirmation as Text and Newsletter as Yes for you with postal fulfilment 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Prefer not to be contacted, Licence Confirmation as Letter and Newsletter as Prefer not to be contacted for you with postal fulfilment 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-license-default",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Prefer not to be contacted, Licence Confirmation as Letter and Newsletter as Prefer not to be contacted for you with postal fulfilment 2`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-license-default",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Prefer not to be contacted, Licence Confirmation as Letter and Newsletter as Prefer not to be contacted for you with postal fulfilment 3`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-license-default",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Text, Licence Confirmation as Email and Newsletter as Prefer not to be contacted 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-text-sngl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Text, Licence Confirmation as Email and Newsletter as Prefer not to be contacted for you with postal fulfilment 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-text-sngl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Text, Licence Confirmation as Email and Newsletter as Yes 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-text-sngl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Text, Licence Confirmation as Email and Newsletter as Yes for you with postal fulfilment 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-text-sngl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-emailnew3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Text, Licence Confirmation as Text and Newsletter as Prefer not to be contacted 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-text-sngl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Text, Licence Confirmation as Text and Newsletter as Prefer not to be contacted for you with postal fulfilment 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-text-sngl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Text, Licence Confirmation as Text and Newsletter as Yes 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-text-sngl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should display the Licence as Text, Licence Confirmation as Text and Newsletter as Yes for you with postal fulfilment 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-text-sngl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) should not include newsletter option if buying for someone else 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-license-default",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
]
`;

exports[`contact-summary > route returns value of isLicenceForYou if licence is "false" 1`] = `Symbol(Review or change the licence details other)`;

exports[`contact-summary > route returns value of isLicenceForYou if licence is "true" 1`] = `Symbol(Review or change the licence details)`;
